# customs-inspector

./: CITATION.cff  README.md  pyproject.toml
customs_inspector/: audit.py  plugin.py  server.py
customs_inspector/static/: diff.html  footer.template  header.template  stop.template
